[package]
name = "kiddo-test"
version = "0.1.1"
authors = ["lagleki <gleki.is.my.name@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
getrandom = { version = "0.2.10", features = ["js"] }
kiddo = { version = "2.1.2", features = ["serialize"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
